<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of Prisma.
  ~
  ~     Prisma is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Prisma is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Prisma.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.condomitti.prisma.widgets.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/parentLayout">
	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal">
		<View android:id="@+id/focusRequester" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="1dp" android:layout_height="1dp" />
		<TextView android:text="TextView" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/txtTitle"
			android:focusable="true"></TextView>
		<com.condomitti.prisma.widgets.UntouchableButton android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="@string/insert_name"
			android:id="@+id/btnInsertName"/>
		<TextView android:layout_height="wrap_content" android:id="@+id/txtName"
			android:text="" android:layout_width="wrap_content"
			android:focusable="true"></TextView>
		<com.condomitti.prisma.widgets.UntouchableButton android:layout_height="wrap_content" android:id="@+id/btnInsertPhone"
			android:layout_width="wrap_content" android:text="@string/insert_phone"/>
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="match_parent" android:orientation="vertical"
			android:id="@+id/llUserPhones" android:gravity="center_horizontal">
		</LinearLayout>
		<com.condomitti.prisma.widgets.UntouchableButton android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:id="@+id/btnInsertEmail"
			android:text="@string/insert_email"/>
		<LinearLayout android:layout_height="wrap_content"
			android:id="@+id/llUserEmails" android:layout_width="match_parent"
			android:orientation="vertical" android:gravity="center_horizontal"></LinearLayout>
		<com.condomitti.prisma.widgets.UntouchableButton android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="@string/save"
			android:id="@+id/btnSave"/>
		<com.condomitti.prisma.widgets.UntouchableButton android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:id="@+id/btnCancel"
			android:text="@string/cancel"/>
	</LinearLayout>

</com.condomitti.prisma.widgets.CustomScrollView>
