<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of Prisma.
  ~
  ~     Prisma is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Prisma is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Prisma.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.condomitti.prisma.widgets.CustomLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical" android:gravity="center_horizontal" android:id="@+id/parentLayout">
	<View android:id="@+id/focusRequester" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="1dp" android:layout_height="1dp" />
	<TextView android:layout_width="wrap_content" android:text=""
		android:id="@+id/titleContactTelephoneOptions" android:layout_height="wrap_content"></TextView>
	<com.condomitti.prisma.widgets.UntouchableButton android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/btnCallThisNumber"
		android:text="@string/call_this_number"/>
	<com.condomitti.prisma.widgets.UntouchableButton android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="@string/send_sms_to_this_number"
		android:id="@+id/btnSendSMSToThisNumber"/>
	<com.condomitti.prisma.widgets.UntouchableButton android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="@string/cancel"
		android:id="@+id/btnCancel"/>
</com.condomitti.prisma.widgets.CustomLinearLayout>
